--- a/Módulo 2/Tema 6_React/ejercicios/ejercicio7/package.json
+++ b/Módulo 2/Tema 6_React/ejercicios/ejercicio7/package.json
@@ -1,16 +1,15 @@
 {
-  "homepage": "https://JCovian.github.io",
-  "name": "ejercicio3",
+  "name": "ejercicio7",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.2.0",
+    "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "boostrap": "^2.0.0",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^4.6.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -37,8 +36,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^4.0.0"
   }
 }
